# sentience-python

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMERCIAL_LICENSE.md  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.md  latest_release.json  package-lock.json  pyproject.toml  pytest.ini
docs/: CODE_HARDENING_PLAN.md  PHASE_5_ANALYSIS.md  QUERY_DSL.md
examples/: agent_layers_demo.py  agent_runtime_verification.py  async_api_demo.py  auth_injection_agent.py  basic_agent.py  basic_agent_async.py  browser_use_integration.py  click_rect_demo.py  cloud_tracing_agent.py  find_text_demo.py  hello.py  hello_async.py  human_cursor_click_demo.py  local_tracing_agent.py  query_demo.py  query_demo_async.py  read_markdown.py  read_markdown_async.py  residential_proxy_agent.py  semantic_wait_demo.py  semantic_wait_demo_async.py  show_grid_examples.py  test_local_llm_agent.py  video_recording_advanced.py  video_recording_demo.py  wait_and_click.py  wait_and_click_async.py
sentience/: __init__.py  _extension_loader.py  action_executor.py  actions.py  agent.py  agent_runtime.py  async_api.py  base_agent.py  browser.py  browser_evaluator.py  canonicalization.py  cli.py  cloud_tracing.py  conversational_agent.py  cursor_policy.py  element_filter.py  expect.py  inspector.py  llm_interaction_handler.py  llm_provider.py  models.py  overlay.py  protocols.py  query.py  read.py  recorder.py  screenshot.py  sentience_methods.py  snapshot.py  snapshot_diff.py  text_search.py  trace_event_builder.py  tracer_factory.py  tracing.py  utils.py  verification.py  visual_agent.py  wait.py
sentience_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: README.md  RUN_TESTS.sh  conftest.py  test_actions.py  test_agent.py  test_agent_runtime.py  test_async_api.py  test_backends.py  test_browser.py  test_cloud_tracing.py  test_conversational_agent.py  test_file_size_tracking.py  test_generator.py  test_grid_bounds.py  test_importance_score.py  (+19 more)
(+50 files in other folders)
