[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentience-python"
version = "0.1.0"
description = "Python SDK for Sentience AI Agent Browser Automation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sentience Team"}
]
keywords = ["browser-automation", "playwright", "ai-agent", "web-automation", "sentience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/SentienceAPI/sentience-python"
Repository = "https://github.com/SentienceAPI/sentience-python"
Issues = "https://github.com/SentienceAPI/sentience-python/issues"

[project]
dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "requests>=2.31.0",  # For server-side API calls
    "playwright-stealth>=1.0.6",  # Bot evasion and stealth mode
]

[project.scripts]
sentience = "sentience.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sentience*"]

